# nb-cli-plugin-bootstrap

./: README.md  pyproject.toml
nb_cli_plugin_bootstrap/: cli.py  const.py  plugin.py  utils.py
nb_cli_plugin_bootstrap/handlers/: bootstrap.py  pip_index.py  shell.py  update_project.py  venv.py
nb_cli_plugin_bootstrap/templates/bootstrap/: cookiecutter.json
nb_cli_plugin_bootstrap/templates/bootstrap/hooks/: post_gen_project.py  pre_gen_project.py
nb_cli_plugin_bootstrap/templates/bootstrap/{{cookiecutter.computed.folder_name}}/: !run.sh  #run.sh  #update-project.sh  #启动.bat  #更新所有插件.bat  .env.prod  bot.py  pyproject.toml
nb_cli_plugin_bootstrap/templates/bootstrap/{{cookiecutter.computed.folder_name}}/src/plugins/: {{cookiecutter.computed.ping_plugin_name}}.py
nb_cli_plugin_bootstrap/templates/bootstrap/{{cookiecutter.nonebot.folder_name}}/: #shell.sh  #update.sh  #启动.bat  #更新所有插件.bat  #进入虚拟环境.bat  .env.prod  pyproject.toml
