[project]
name = "nb-cli-plugin-bootstrap"
dynamic = ["version"]
description = "A nb-cli plugin for quickly create and bootstrap a NoneBot2 project."
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nb-cli>=1.4.2",
    "shellingham>=1.5.4",
    "findpython>=0.7.0",
    "cookit[pydantic]>=0.13.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nb-cli-plugin-bootstrap"

[project.entry-points.nb]
bootstrap = "nb_cli_plugin_bootstrap.plugin:install"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nb_cli_plugin_bootstrap/__init__.py"
